--- a/templates/book_appointment.html
+++ b/templates/book_appointment.html
@@ -1,7 +1,7 @@
 {% extends "patient_index.html" %}
 {% load static %}
 {% block title %}
-appointment
+Mangalya
 {% endblock title %}
 
 {% block content %}
