--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
-
 {% extends "base.html" %}
 {% load static %}
 {% block title %}
@@ -32,27 +31,27 @@
 <!-------------------------------- end hero section ------------------------------------------>
 
 <!-- start service section container-1 -->
-<div class="row column-gap-0" style="margin: 20px 80px;">
-
+<div class="row d-flex justify-content-center" style="margin: 80px 80px 90px;">
+<div class="row column-gap-0" style="margin-bottom: 20px;">
   <div class="col">
     <div class="row column-gap-3">
-      <div class="col-lg-6 bg-grey p-4">
+      <div class="service-box col-lg-6 p-4">
         <div class="icon">
           <img src="{% static 'images/icons/pill-icon.svg' %}" alt="" class="icon-image">
         </div>
         <h5 class="card-title">Angioplasty</h5>
-        <p class="card-text">Our team of highly professionals uses the latest heal technologies health quickly and easily.</p>
+        <p class="card-text">Our expert cardiology team provides precise, minimally invasive procedures to restore blood flow, ensuring superior cardiac care.</p>
         <div class="d-md-block">
           <button class="Read-more-btn" type="button">Read more <i><img src="{% static 'images/icons/grey-plus-icon.svg' %}" alt=""></i></button>
         </div>
       </div>
 
-      <div class="col bg-grey p-4">
+      <div class="service-box col p-4">
         <div class="icon">
           <img src="{% static 'images/icons/heart-icon.svg' %}" alt="" class="icon-image">
         </div>
         <h5 class="card-title">Cardiograph</h5>
-        <p class="card-text">Our team of highly professionals uses the latest heal technologies health quickly and easily.</p>
+        <p class="card-text">Our specialists deliver accurate heart diagnostics using cutting-edge technology to monitor and manage your cardiovascular health.</p>
         <div class="d-md-block">
           <button class="Read-more-btn" type="button">Read more <i><img src="{% static 'images/icons/plus-green-icon.svg' %}" alt=""></i></button>
         </div>
@@ -62,19 +61,19 @@
 
   <div class="col">
     <div class="row column-gap-0 ps-3">
-      <div class="col-lg-6 bg-grey p-4">
+      <div class="service-box col-lg-6 p-4">
         <div class="icon">
           <img src="{% static 'images/icons/teeth-icon.svg' %}" alt="" class="icon-image">
         </div>
         <h5 class="card-title">Dental</h5>
-        <p class="card-text">Our team of highly professionals uses the latest heal technologies health quickly and easily.</p>
+        <p class="card-text">Our skilled dental team offers personalized care, including preventive, cosmetic, and surgical treatments for optimal oral health.</p>
         <div class="d-md-block">
           <button class="Read-more-btn" type="button">Read more <i><img src="{% static 'images/icons/grey-plus-icon.svg' %}" alt=""></i></button>
         </div>
       </div>
 
-      <div class="col-lg-6" style="height: 100%; padding: 0;">
-        <img src="{% static 'images/Dental-image.png' %}" alt="Dental" class="img-fluid" style="object-fit: cover; width: 100%; height: 100%;">
+      <div class="service-box col-lg-6" style="height: 100%; padding: 0;">
+        <img src="{% static 'images/Dental-image.png' %}" alt="Dental" class="service-img">
       </div>
     </div>
   </div>
@@ -83,44 +82,44 @@
 <!-- end service section container-1 -->
 
 <!-- start service section container-2 -->
-<div class="row column-gap-0" style="margin: 20px 80px;">
+<div class="row column-gap-0" >
   <div class="col">
     <div class="row column-gap-0 pe-3">
-      <div class="col-lg-6 bg-grey p-4">
+      <div class="service-box col-lg-6 p-4">
         <div class="icon">
           <img src="{% static 'images/icons/eye-icon.svg' %}" alt="" class="icon-image">
         </div>
         <h5 class="card-title">Eye Care</h5>
-        <p class="card-text">Our team of highly professionals uses the latest heal technologies health quickly and easily.</p>
+        <p class="card-text">Our ophthalmology experts provide advanced vision solutions, from corrective treatments to specialized eye surgeries.</p>
         <div class="d-md-block">
           <button class="Read-more-btn" type="button">Read more <i><img src="{% static 'images/icons/grey-plus-icon.svg' %}" alt=""></i></button>
         </div>
       </div>
-      <div class="col-lg-6" style="height: 100%; padding: 0;">
-        <img src="{% static 'images/eye-care-image.png ' %}" alt="Dental" class="img-fluid" style="object-fit: cover; width: 100%; height: 100%;">
+      <div class="col-lg-6 service-box" style=" padding: 0;">
+        <img src="{% static 'images/eye-care-image.png ' %}" alt="Dental" class="service-img" >
       </div>
     </div>
   </div>
 
   <div class="col">
     <div class="row column-gap-3">
-      <div class="col-lg-6 bg-grey p-4">
+      <div class="service-box col-lg-6 p-4">
         <div class="icon">
           <img src="{% static 'images/icons/brain-icon.svg' %}" alt="" class="icon-image">
         </div>
         <h5 class="card-title">Endocrinology</h5>
-        <p class="card-text">Our team of highly professionals uses the latest heal technologies health quickly and easily.</p>
+        <p class="card-text">Our dedicated endocrinologists address hormonal imbalances with customized treatments to support your overall well-being.</p>
         <div class="d-md-block">
           <button class="Read-more-btn" type="button">Read more <i><img src="{% static 'images/icons/plus-green-icon.svg' %}" alt=""></i></button>
         </div>
       </div>
 
-      <div class="col bg-grey p-4">
+      <div class="service-box col p-4">
         <div class="icon">
           <img src="{% static 'images/icons/syringe-icon.svg' %}" alt="" class="icon-image">
         </div>
         <h5 class="card-title">Orthopaedics</h5>
-        <p class="card-text">Our team of highly professionals uses the latest heal technologies health quickly and easily.</p>
+        <p class="card-text">Our experienced orthopaedic team ensures comprehensive care, offering advanced treatments for joint, bone, and muscle conditions.</p>
         <div class="d-md-block">
           <button class="Read-more-btn" type="button">Read more <i><img src="{% static 'images/icons/grey-plus-icon.svg' %}" alt=""></i></button>
         </div>
@@ -129,23 +128,25 @@
   </div>
 </div>
 <!-- end service section container-2 -->
-
+</div>
   
    <!------------------------------- start blue schedule section ------------------------------------->
-  <div class="d-flex" style="margin: 80px 150px;">
-    <div class="card">
+   {% if user.is_patient == True or not user.is_authenticated %}
+  <div class="container" style="margin:auto">
+    <div class="card" style="margin: auto;">
      <img src="{% static 'images/Banner-blue-pattern.png' %}" class="card-img" alt="image">
          <div class="card-img-overlay text-center" style="margin: 60px 150px;">
            <h4 class="text-light">Schedule an imperson or virtual appointment today</h4>
-           <div class="btns-wrap" style="margin-top: 24px;">
-             <a href="#" class="btn btn-primary">Book an Appointment</a>
+           <div class="btns-wrap" style="margin-top: 44px;">
+             <a href="{% url 'signin' %}" class="btn btn-primary">Book an Appointment</a>
            </div>
          </div>
      </div>
      </div>
+      {% endif %}
    <!------------------------------- end blue schedule section ------------------------------------->
 
-    <div class="container text-center">
+    <div class="container text-center" style="margin-top: 120px;">
     <div class="box-text ms-auto me-auto" style="font-size: 14px;">FEEDBACK</div>
     <h4 style="margin-bottom: 25px;">Feedbacks about our service from the bottom of heart</h4>
   </div>
@@ -177,7 +178,7 @@
               <hr>
           <!--Comments---------------------------------------->
                 <div class="client-comment">
-                  <p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate.</p>
+                  <p>The doctors and nurses acted swiftly and effectively during a critical time. Their compassion and expertise saved my life. Forever grateful</p>
               </div>
               <!--reviews------>
               <div class="reviews">
@@ -213,7 +214,7 @@
             <hr>
         <!--Comments---------------------------------------->
               <div class="client-comment">
-                <p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate.</p>
+                <p>Advanced technology paired with genuine care. The team made me feel valued, and the follow-up care was seamless. Excellent experience</p>
             </div>
             <!--reviews------>
             <div class="reviews">
@@ -248,7 +249,7 @@
             <hr>
         <!--Comments---------------------------------------->
               <div class="client-comment">
-                <p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate.</p>
+                <p>The staff were professional, kind, and attentive. The facility was spotless, and the care I received was outstanding. Highly recommended!!</p>
             </div>
             <!--reviews------>
             <div class="reviews">
@@ -265,7 +266,7 @@
 </section>
 
 <!-- Start Team Section -->
-<section class="team-container d-flex flex-column align-items-center py-5">
+<!-- <section class="team-container d-flex flex-column align-items-center py-5">
   <h2 class="text-center mb-5 text-light">OUR PROFESSTIONAL EXPERTS</h2>
   <div class="container">
     <div class="row justify-content-center">
@@ -274,8 +275,8 @@
         <div class="pic">
           <img src="{% static 'images/vaneesa-adams-photo.png' %}">
         </div>
-        <h3 class="Name">Dr. Helen Wilmore</h3>
-        <span class="dept">Dental Patient</span>
+        <h3 class="Name">Dr. Parag Sancheti</h3>
+        <span class="dept">Surgeon</span>
         <ul class="social">
           <li class="social-list"><a href="#" class="fa fa-facebook"></a></li>
           <li class="social-list"><a href="#" class="fa fa-twitter"></a></li>
@@ -315,7 +316,7 @@
     </div>
   </div>
 </div>
-</section>
+</section> -->
 <!-- End Team Section -->
   
 {% endblock content %}
