--- a/static_cdn/css/style.css
+++ b/static_cdn/css/style.css
@@ -7,6 +7,10 @@
     width: fit-content;
   }
 
+.button-outlined{
+  border: 1px slid #0097B2;
+}
+
   
   .btn-primary.active{
     color: #0152A8 !important;
