--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,9 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
 
+    <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     <!-- Logo Icon -->
@@ -36,6 +39,8 @@
           display: inline-block;
           padding: 10px 15px;
         }
+
+        
 
 
     </style>
@@ -83,7 +88,7 @@
         </li> -->
         <!-- Dashboard -->
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'patient_dashboard' %}">Dashboard</a>
+          <a class="nav-link {% if request.resolver_match.url_name == 'appointment_history' or request.resolver_match.url_name == 'patient_dashboard' %}active{% endif %}" href="{% url 'patient_dashboard' %}">Dashboard</a>
         </li>
         <!-- About -->
         <li class="nav-item">
@@ -91,11 +96,11 @@
         </li>
         <!-- Doctors -->
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'doctor_list' %}">Doctors</a>
+          <a class="nav-link {% if request.resolver_match.url_name == 'doctor_list' or request.resolver_match.url_name == 'doctor_profile' %}active{% endif %}" href="{% url 'doctor_list' %}">Doctors</a>
         </li>
         <!-- Contact Us -->
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact Us</a>
+          <a class="nav-link {% if request.resolver_match.url_name == 'contact' %}active{% endif %}" href="{% url 'contact' %}">Contact Us</a>
         </li>
       </ul>
     </div>
@@ -148,13 +153,8 @@
     <!-- Nav menu list -->
     <div class="collapse navbar-collapse justify-content-center" id="navbarScroll">
       <ul class="navbar-nav my-2 my-lg-0 fs-5">
-        <!-- Home -->
-        <!-- <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
-        </li> -->
-        <!-- Dashboard -->
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'doctor_dashboard' %}">Dashboard</a>
+          <a class="nav-link {% if request.resolver_match.url_name == 'appointment_history' or request.resolver_match.url_name == 'doctor_dashboard' %}active{% endif %}" href="{% url 'doctor_dashboard' %}">Dashboard</a>
         </li>
         <!-- About -->
         <li class="nav-item">
@@ -162,11 +162,11 @@
         </li>
         <!-- Doctors -->
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'doctor_list' %}">Doctors</a>
+          <a class="nav-link {% if request.resolver_match.url_name == 'doctor_list' or request.resolver_match.url_name == 'doctor_profile' %}active{% endif %}" href="{% url 'doctor_list' %}">Doctors</a>
         </li>
         <!-- Contact Us -->
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact Us</a>
+          <a class="nav-link {% if request.resolver_match.url_name == 'contact' %}active{% endif %}" href="{% url 'contact' %}">Contact Us</a>
         </li>
       </ul>
     </div>
@@ -225,7 +225,7 @@
       <ul class="navbar-nav my-2 my-lg-0 fs-5">
         <!-- Home -->
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
+          <a class="nav-link {% if request.resolver_match.url_name == 'index' %}active{% endif %}" href="{% url 'index' %}">Home</a>
         </li>
         <!-- About -->
         <li class="nav-item">
@@ -233,11 +233,11 @@
         </li>
         <!-- Doctors -->
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'doctor_list' %}">Doctors</a>
+          <a class="nav-link {% if request.resolver_match.url_name == 'doctor_list' or request.resolver_match.url_name == 'doctor_profile' %}active{% endif %}" href="{% url 'doctor_list' %}">Doctors</a>
         </li>
         <!-- Contact Us -->
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact Us</a>
+          <a class="nav-link {% if request.resolver_match.url_name == 'contact' %}active{% endif %}" href="{% url 'contact' %}">Contact Us</a>
         </li>
       </ul>
     </div>
@@ -294,59 +294,53 @@
 {% block footer %}
 <!-- start footer -->
 <section class="footer-wrapper">
-  <div class="footer-container d-flex" style="margin: 10px 60px 60px; background-image: url('{% static "images/Footer-Background.png" %}')">
-  <div class="row d-flex" style="margin: 40px;">
-  
-
-    <div class="row align-items-center" style="margin-bottom: 32px;">
-      <div class="col-lg-4">
+  <div class="footer-container d-flex">
+    <div class="row d-flex justify-content-between border-info">
+      <div class="col-12 mb-4">
         <a href="#"><img src="{% static 'images/Logo/Logo-cropped.svg' %}" class="footer-logo" alt=""></a>
       </div>
-    
-      <div class="col-lg-6 d-flex justify-content-between">
-        <i class="contact-icons"><img src="{% static 'images/icons/blue-phone-icon.svg' %}"  alt=""> &nbsp;(+22) 123 - 4567 - 900</i>
-        <i class="contact-icons"><img src="{% static 'images/icons/envelop.svg' %}"  alt=""> &nbsp;support@mangalya.com</i>
-      </div>
-
-      <div class="col-lg-2 mt-3">
-        <div class="footer-social">
-        <ul>
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-facebook-f"></i>
-          <i class="fa-brands fa-twitter"></i>
-        </ul>
+      
+      <div class="col-lg-4 col-xxl-4 mb-3">        
+        <h5 class="tag-line mb-4">“A Simple Story About The Doctorate Medical Center & Health Care Foundation"</h5>
+        <div class="mb-4">
+          <img src="{% static 'images/icons/blue-phone-icon.svg' %}"  alt=""> &nbsp;(+22) 123 - 4567 - 900
         </div>
-      </div>
-    </div>
-
-    <div class="row d-flex justify-content-evenly">
-      <div class="col-6 col-lg-4 mb-3">
-        <h5>“A Simple Story About <br> The Doctorate Medical Center & Health Care Foundation"</h5>
+          <div>
+            <img src="{% static 'images/icons/envelop.svg' %}"  alt=""> &nbsp;support@mangalya.com
+          </div>
       </div>
 
-        <div class="col-6 col-lg-2 mb-3">
-          <h6>Explore</h6>
+        <div class="col-lg-2 col-xxl-2 mb-3 ps-5">
+          <h6 class="text-start">Explore</h6>
           <div class="footer-list">
-            <a href="#">Home</a>
+            <a href="{% url 'index' %}">Home</a>
             <a href="#">Services</a>
             <a href="#">About Us</a>
-            <a href="#">Testimonials</a>
-            <a href="#">News</a>
+            <a href="{% url 'contact' %}">Contact Us</a>
           </div>
         </div>
 
-        <div class="col-6 col-lg-2 mb-3">
-          <h6>Uitility Pages</h6>
+        <div class="col-lg-3 col-xxl-3 mb-3 ps-5">
+          <h6 class="text-start">Patient Resources</h6>
           <div class="footer-list">
-            <a href="/">Style Guide</a>
-            <a href="#">Changelog</a>
+            <a href="/">Insurance Information</a>
+            <a href="#">Patient Rights</a>
             <a href="#">Licenses</a>
-            <a href="#">Protected Page</a>
-            <a href="#">Trems & Conditions</a>
+            <a href="#">Emergency Care</a>
           </div>
         </div>
 
-      <div class="col-6 col-lg-4 mb-3">
+        <div class="col-lg-3 col-xxl-3 mb-3 ps-5">
+          <h6 class="text-start">Legal & Policies</h6>
+          <div class="footer-list">
+            <a href="/">Privacy Policy</a>
+            <a href="#">Terms & Conditions</a>
+            <a href="#">Refund Polic</a>
+            <a href="#">Licenses</a>
+          </div>
+        </div>
+
+      {% comment %} <div class="col-6 col-lg-4 mb-3">
         <h6>Book an appointment</h6>
         <p class="footer-email-input">It is a long established fact that a reader will be distracted</p>
         <form style="margin-bottom: 15px;">
@@ -354,12 +348,10 @@
         </form>
         <div class="btns-wrap">
           <a href="#" class="btn btn-secondary me-2">Submit</a>
-        </div>
+        </div>{% endcomment %}
       </div>
       </div>
-    </div>
-    </div>
-  </div>
+    </div> 
 </section>
 <!-- end footer section -->
   
