--- a/templates/doctor_profile.html
+++ b/templates/doctor_profile.html
@@ -59,7 +59,7 @@
               <!-- Doctor Information -->
                   <div class="row ">
                     <div class="col-auto border border-0">
-                      <img src="{{ doctor.doctor_profile.profile_picture.url }}" class="img-fluid" alt="..." style="height: 300px; width: auto;">
+                      <img src="{{ doctor.doctor_profile.profile_picture.url }}" class="object-fit-cover" alt="..." style="height: 300px; width: 300px; object-position:top">
                     </div>
                     <div class="col border p-3">
                       <div class="card-body">
